WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71247
RenderImage.cpp calls SVGImage even if it's not defined
https://bugs.webkit.org/show_bug.cgi?id=71247
Summary
RenderImage.cpp calls SVGImage even if it's not defined
John Gregg
Reported
2011-10-31 15:47:11 PDT
RenderImage.cpp calls SVGImage even if it's not defined
Attachments
Patch
(1.16 KB, patch)
2011-10-31 15:50 PDT
,
John Gregg
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Gregg
Comment 1
2011-10-31 15:48:38 PDT
This was introduced in
r98852
, and causes a compile error if ENABLE_SVG=0.
John Gregg
Comment 2
2011-10-31 15:50:20 PDT
Created
attachment 113096
[details]
Patch
John Gregg
Comment 3
2011-10-31 15:51:04 PDT
third_party/WebKit/Source/WebCore/rendering/RenderImage.cpp:549:36: error: use of undeclared identifier 'SVGImage'; did you mean 'CGImage'? return static_pointer_cast<SVGImage>(image)->embeddedContentBox(); ^ 1 error generated. make: *** [out/Debug/obj.target/webcore_rendering/third_party/WebKit/Source/WebCore/rendering/RenderImage.o] Error 1
John Gregg
Comment 4
2011-10-31 16:02:00 PDT
Committed
r98895
: <
http://trac.webkit.org/changeset/98895
>
Alexey Proskuryakov
Comment 5
2011-10-31 17:04:43 PDT
***
Bug 71235
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug