RenderImage.cpp calls SVGImage even if it's not defined https://bugs.webkit.org/show_bug.cgi?id=71247

This fixes a compile error when ENABLE_SVG=0.

* rendering/RenderImage.cpp:
(WebCore::RenderImage::embeddedContentBox):


Canonical link: https://commits.webkit.org/87503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98895 268f45cc-cd09-0410-ab3c-d52691b4dbfc